# gc-rust

./: Cargo.toml  README.md
.github/workflows/: release.yaml  test.yaml
src/: main.rs  parser.rs
