[package]
name = "gc-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
getopts = "0.2.21"
regex = "1.10.6"
subprocess = "0.2.9"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable link time optimization.
codegen-units = 1 # Reduce parallel code generation units.
